--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.2",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
