--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://keshri522.github.io/ShoppingWebsite",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -29,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
